@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Tue Nov 22 20:23:36 CET 2005
+// Thu Dec 22 15:41:25 CET 2005
 //
 // (C) 2005 Jb Evain
 //
@@ -80,7 +80,10 @@ namespace Mono.Cecil {
 			if (value == null)
 				throw new ArgumentNullException ("value");
 
-			if (OnTypeReferenceAdded != null && !this.Contains (value))
+			if (this.Contains (value))
+				throw new ArgumentException ("Duplicated value");
+
+			if (OnTypeReferenceAdded != null)
 				OnTypeReferenceAdded (this, new TypeReferenceEventArgs (value));
 
 			this.BaseSet (value.FullName, value);
